# ibus-xkb-layouts

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac
src/: Makefile.am  engine.c  engine.h  main.c  xkb-layouts.xml.in.in  xkbutil.c  xkbutil.h
